敵の作成まで
